k8s/cluster/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - example.mydomain.com
    secretName: jenkins-crt
  rules:
  - host: example.mydomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cd-jenkins
          servicePort: 8080
